--- a/styles/main.css
+++ b/styles/main.css
@@ -1370,4 +1370,60 @@ footer {
   left: calc(50% - 58px);
   width: 116px;
   height: 116px;
+}
+
+.benefits {
+  position: relative;
+  margin-top: 120px;
+  padding-top: 80px;
+  padding-bottom: 126px;
+  background: #1e212c;
+}
+
+.benefits__container .benefits__title {
+  color: #fff;
+}
+.benefits__container .benefits__subtitle {
+  color: #fff;
+  opacity: 0.6;
+}
+.benefits__container .benefits__list {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
+}
+.benefits__container .benefits__list .benefits__item {
+  max-width: 285px;
+  height: 188px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.benefits__container .benefits__list .benefits__item .item__icon {
+  width: 48px;
+  height: 48px;
+  margin-bottom: 24px;
+}
+.benefits__container .benefits__list .benefits__item .item__title {
+  color: #fff;
+  font-size: 20px;
+  margin-bottom: 8px;
+}
+.benefits__container .benefits__list .benefits__item .item__subtitle {
+  color: #fff;
+  opacity: 0.6;
+  font-size: 16px;
+  margin-bottom: 0;
+}
+.benefits__container .benefits__btn {
+  position: absolute;
+  bottom: -26px;
+  left: calc(50% - 195px);
+  font-size: 18px;
+  padding: 0 112px;
+  letter-spacing: 0.5px;
 }/*# sourceMappingURL=main.css.map */
