add portfolio page

--- a/styles/components/_page-title.scss
+++ b/styles/components/_page-title.scss
@@ -38,7 +38,7 @@
             position: absolute;
             right: 0;
             top: -20px;
-            width: 975px;
+            width: fit-content;
             height: 600px;
             z-index: -1;
       }
