fix visual bugs

--- a/styles/layout/_benefits.scss
+++ b/styles/layout/_benefits.scss
@@ -5,7 +5,7 @@
       padding-bottom: 126px;
       background: $gray900;
 }
-.benefits__container {
+.benefits-container {
       .benefits__title {
             color: $white;
       }
