--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,7 +13,6 @@
 @import './components/testimonials-card';
 @import './components/scroll-top';
 @import './components/page-title';
-@import './components/offer-section';
 @import './layout/header';
 @import './layout/hero';
 @import './layout/video';
@@ -32,3 +31,4 @@
 @import './layout/benefits';
 @import './layout/pricing';
 @import './layout/tabs';
+@import './layout/offer';
