--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -22,7 +22,7 @@
                         transition: 0.5s;
                         color: $gray800;
 
-                        &:hover {
+                        &:hover, &.active {
                               color: $primary;
                         }
                   }
