--- a/styles/main.css
+++ b/styles/main.css
@@ -1789,4 +1789,63 @@ footer {
   color: #1e212c;
   font-size: 14px;
   margin-bottom: 0;
+}
+
+.quotation-container {
+  margin-top: 120px;
+  position: relative;
+  width: 100%;
+  height: 700px;
+}
+.quotation-container .quotation__img {
+  position: absolute;
+  bottom: 0;
+  left: 15px;
+  width: 525px;
+  height: 580px;
+}
+.quotation-container .quotation__content {
+  position: absolute;
+  top: 0;
+  right: 15px;
+  width: 735px;
+  height: 570px;
+  background: #fff;
+  padding: 80px 105px 80px 135px;
+  box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.03), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 80px 80px -20px rgba(154, 156, 165, 0.08);
+}
+.quotation-container .quotation__content .quotation__braces {
+  position: absolute;
+  left: 77px;
+  top: 80px;
+}
+.quotation-container .quotation__content .quotation__text {
+  position: relative;
+  color: #1e212c;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 150%;
+  margin-bottom: 60px;
+}
+.quotation-container .quotation__content .quotation__name-position {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-items: start;
+}
+.quotation-container .quotation__content .quotation__name-position .name-position__name {
+  font-size: 16px;
+  margin-bottom: 4px;
+}
+.quotation-container .quotation__content .quotation__name-position .name-position__position {
+  font-size: 14px;
+  margin-bottom: 0;
+}
+.quotation-container .quotation__content .quotation__signature {
+  position: absolute;
+  width: 100px;
+  height: 68px;
+  right: 105px;
+  bottom: 70px;
 }/*# sourceMappingURL=main.css.map */
