add team section styles

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -38,4 +38,5 @@
 @import './layout/decisions';
 @import './layout/statistics';
 @import './layout/quotation';
-@import './layout/history'
+@import './layout/history';
+@import './layout/team';
