--- a/styles/layout/_benefits.scss
+++ b/styles/layout/_benefits.scss
@@ -51,3 +51,13 @@
             letter-spacing: 0.5px;
       }
 }
+.benefits-white{
+      background: $white;
+
+      .title{
+            color: $gray900 !important;
+      }
+      .subtitle{
+            color: $gray700 !important;
+      }
+}
