--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,6 +13,7 @@
 @import './components/testimonials-card';
 @import './components/scroll-top';
 @import './components/page-title';
+@import './components/modal';
 @import './layout/header';
 @import './layout/hero';
 @import './layout/video';
@@ -42,3 +43,4 @@
 @import './layout/team';
 @import './layout/map';
 @import './layout/vacancies';
+@import './layout/modal-subscribe';
